--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -597,10 +597,6 @@
         }
         .item:focus {
             border-color: @selected !important;
-
-            span {
-                color: @HCbackground !important;
-            }
         }
     }
 
@@ -736,20 +732,6 @@
     a {
         color: @hyperlink !important;
         text-decoration: underline !important;
-    }
-
-    #sidedocsbar {
-        a {
-            color: @HCbackground !important;
-
-            &:focus {
-                color: @selected !important;
-
-                i, span {
-                    color: @selected !important;
-                }
-            }
-        }
     }
 
     /* Dropdown */
